<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:fillViewport="true"
    tools:context="com.alllinkshare.home.ui.fragments.ALSFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white_four"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <LinearLayout
            android:id="@+id/heading_recent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/bg"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/bg"
                android:text="@string/als_fragment_heading_recent"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:gravity="start"/>
            <Button
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="18dp"
                android:background="?selectableItemBackground"
                android:text="@string/als_fragment_action_close"
                android:textSize="14sp"
                android:textColor="@color/red"
                android:gravity="end"/>
        </LinearLayout>
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_host_recent_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constrainedHeight="true"
            app:layout_constraintTop_toBottomOf="@id/heading_recent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/heading_popular"/>
        <LinearLayout
            android:id="@+id/heading_popular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/bg"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/fragment_host_recent_categories"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/bg"
                android:text="@string/als_fragment_heading_popular"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:gravity="start"/>
        </LinearLayout>
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_host_popular_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constrainedHeight="true"
            app:layout_constraintTop_toBottomOf="@id/heading_popular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>